fix layout of message list on narrower screens and mobile, do not show date for now

--- a/css/mail.css
+++ b/css/mail.css
@@ -250,6 +250,7 @@
 	position: absolute;
 	right: 0;
 	top: 0;
+	max-width: 40%;
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
 	filter: alpha(opacity=50);
 	opacity: .5;
